--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,7 @@
     <artifactId>SalesTaxes</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
+    <description>Sales taxes calculation (backend)</description>
     <developers>
         <developer>
             <id>vrivoire</id>
