--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
-        <mainClass>com.teksystems.salestaxes.Main</mainClass>
+        <mainClass>com.vrivoire.salestaxes.Main</mainClass>
     </properties>
 
     <parent>
