Better Boot/Hibernate

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 # On file
-#spring.datasource.url:jdbc:h2:./database/prvml.db;AUTO_SERVER=TRUE
+#spring.datasource.url:jdbc:h2:./database/slestaxes.db;AUTO_SERVER=TRUE
 
 # In memory
-spring.datasource.url:jdbc:h2:mem:prvml
+spring.datasource.url:jdbc:h2:mem:slestaxes
 
 spring.datasource.driverClassName:org.h2.Driver
 spring.datasource.username=sa
