--- a/src/main/resources/salesTaxes.properties
+++ b/src/main/resources/salesTaxes.properties
@@ -1,3 +1,4 @@
-basket1=1,book,1,music CD,1,chocolate bar
-basket2=1,imported box of chocolates,1,imported bottle of perfume1
-basket3=1,imported bottle of perfume2,1,bottle of perfume,1,packet of headache pills,1,box of imported chocolates
+#basketID=quantity,itemName, etc...
+basket1=1,book,1,musicCD,1,chocolatebar
+basket2=1,importedboxofchocolates,1,importedbottleofperfume1
+basket3=1,importedbottleofperfume2,1,bottleofperfume,1,packetofheadachepills,1,boxofimportedchocolates
